<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:contentPadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"

        >
            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name2"
                style="@style/home_title"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content2"
                style="@style/home_content"
                android:layout_marginTop="15dp"
                android:layout_below="@id/tv3"
                android:layout_alignLeft="@id/tv3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time2"
                style="@style/home_time"
                android:layout_marginTop="13dp"
                android:layout_below="@id/tv4"
                android:layout_alignLeft="@id/tv4"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>