<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/project_cardView27"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            >
            <ImageView
                android:id="@+id/imageview27"
                android:layout_width="100dp"
                android:layout_height="190dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_title27"
                style="@style/project_content_title"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imageview27"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_content27"
                style="@style/project_content_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tv1"
                android:layout_alignLeft="@id/tv1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_time27"
                style="@style/project_content_time"
                android:layout_marginTop="20dp"
                android:layout_below="@id/tv2"
                android:layout_alignLeft="@id/tv2"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>